# career-coach-ai

./: ,uvignore  .env.example  CLAUDE.md  Makefile  README.md  app.py  config.py  config.yaml  models.py  promptkit.py  pyproject.toml  test_browser_search.py  tools.py
docs/: ai-job-filtering.md  career_coach_phase1_implementation.md  career_coach_plan.md  career_coach_progress_log.md  phase2_job_analysis.md
prompts/: coach_system.md
tools/: __init__.py  document.py
tools/job_search/: __init__.py  browser.py  cli.py  core.py  job_search.py
