[project]
name = "career-coach-ai"
version = "0.2.0"
description = "Private AI Career Coach using OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.1.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "nest-asyncio>=1.5.0",
    "ddgs",
    "beautifulsoup4",
]
